# Model_Pulse

./: .env.example  .env.txt  .gitignore  ModelPulse_Technical_Product_Report.docx  README.md  render.yaml
apps/api/: package-lock.json  package.json
apps/api/src/: index.js
apps/api/src/controllers/: authController.js  groundTruthController.js  llmController.js  modelsController.js  predictionsController.js
apps/api/src/middleware/: authJwt.js  authSdk.js
apps/api/src/models/: AccuracySnapshot.js  AlertEvent.js  AlertRule.js  ApiKey.js  Baseline.js  DriftSnapshot.js  GroundTruth.js  LlmCall.js  LlmSnapshot.js  Model.js  Prediction.js  User.js  index.js
apps/api/src/routes/: alerts.js  auth.js  groundTruth.js  llm.js  models.js  predictions.js  reports.js
apps/api/src/services/: accuracyCron.js  alert.js  cron.js  drift.js  llmCron.js
apps/api/src/utils/: mongo.js
apps/frontend/: package-lock.json  package.json
apps/frontend/public/: README.txt  index.html
apps/frontend/src/: App.jsx  index.css
apps/frontend/src/components/: CreateModelModal.jsx  DiagnosisCard.jsx  Layout.jsx  ModelCard.jsx
apps/frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx  ModelDetailPage.jsx  RegisterPage.jsx
apps/frontend/src/services/: api.js
apps/frontend/src/store/: authStore.js
apps/ml-engine/: main.py  requirements.txt
apps/ml-engine/apps/routers/: drift.py  stats.py
apps/ml-engine/apps/schemas/: drift.py  stats.py
apps/ml-engine/apps/services/: drift_service.py  stats_service.py
landing/: index.html
sdk/: README.md  pyproject.toml
sdk/modelpulse/: __init__.py  client.py  config.py  llm.py  monitor.py
tests/: test_ground_truth.py  test_llm_production.py  test_suite.py
