[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "modelpulse"
version = "0.1.0"
description = "ML model monitoring for developers — paste your model, get a health dashboard in 60 seconds"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Saxon Preetham", email = "your@email.com" }]
requires-python = ">=3.8"
keywords = ["ml", "machine-learning", "monitoring", "drift", "mlops", "model-monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://modelpulse.dev"
Documentation = "https://docs.modelpulse.dev"
Repository = "https://github.com/GPREETHAMSAXON/modelpulse"
Issues = "https://github.com/GPREETHAMSAXON/modelpulse/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelpulse*"]
