[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelpulse-sdk"
version = "0.1.1"
description = "ML model monitoring for developers — one decorator, live drift detection, AI diagnosis, alerts in 60 seconds"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Saxon Preetham", email = "preethamsaxon2006@gmail.com" }]
requires-python = ">=3.8"
keywords = ["ml", "machine-learning", "monitoring", "drift", "mlops", "model-monitoring", "ai", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://landing-kappa-lilac.vercel.app"
Repository = "https://github.com/GPREETHAMSAXON/Model_Pulse"
Issues = "https://github.com/GPREETHAMSAXON/Model_Pulse/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelpulse*"]
